fix: naming convntion of http requests
